<resources>
    <string name="app_name">Studz</string>
    <string name="login_title">Welcome to Studz!</string>
    <string name="facebook_app_id">4037595836275120</string>
    <string name="fb_login_protocol_scheme">fb4037595836275120</string>

    <string name="photo">Photo</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_timetable">Timetable</string>
    <string name="menu_subject">Subject</string>
    <string name="menu_tasks">Tasks</string>
    <string name="menu_note">Note</string>
    <string name="logout">Logout</string>
    <string name="account">Account</string>
    <string name="today">TODAY</string>


</resources>