<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_menu_timetable"
            android:title="@string/menu_timetable" />
        <item
            android:id="@+id/nav_subject"
            android:icon="@drawable/ic_menu_subject"
            android:title="@string/menu_subject" />
        <item
            android:id="@+id/nav_tasks"
            android:icon="@drawable/ic_menu_task"
            android:title="@string/menu_tasks" />
        <item
            android:id="@+id/nav_note"
            android:icon="@drawable/ic_menu_note"
            android:title="@string/menu_note" />
    </group>

    <item android:title="@string/account">
        <menu>
            <item
                android:id="@+id/logout"
                android:icon="@drawable/ic_menu_logout"
                android:title="@string/logout"/>
        </menu>
    </item>
</menu>